force-app/main/default/objects/AccountDepositor__c/AccountDepositor__c.object-meta.xml
<CustomObject>
    <label>Account Depositor</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Depositors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>