force-app/main/default/objects/AccountDepositor__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Depositors</relationshipLabel>
    <relationshipName>AccountDepositor</relationshipName>
    <type>Lookup</type>
</CustomField>