force-app/main/default/objects/AccountDepositor__c/fields/Depositor__c.field-meta.xml
<CustomField>
    <fullName>Depositor__c</fullName>
    <label>Depositor</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>