force-app/main/default/objects/AccountDepositor__c/fields/UpdateScope__c.field-meta.xml
<CustomField>
    <fullName>UpdateScope__c</fullName>
    <label>Update Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Unreconciled Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>