force-app/main/default/objects/AccountDepositor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Depositor__c</columns>
    <columns>UpdateScope__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>BizRegion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>